@@ -38,6 +38,8 @@ Trunk (unreleased changes)
   HCAT-427 Document storage-based authorization (lefty via gates)
 
   IMPROVEMENTS
+  HCAT-444 Document reader & writer interfaces (lefty via gates)
+
   HCAT-425 Pig cannot read/write SMALLINT/TINYINT columns (traviscrawford)
 
   HCAT-460 Enable boolean to integer conversions (traviscrawford)
